# ha_agent

./: .gitignore  PLAN.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  validate.yml
custom_components/ha_agent/: __init__.py  activity.py  agent.py  compaction.py  config_flow.py  config_helpers.py  const.py  context.py  conversation.py  embedded_tools.py  llm_client.py  llm_models.py  llm_server.py  llm_telemetry.py  loop_policy.py  manifest.json  mcp_client.py  mcp_errors.py  mcp_session.py  memory.py  orchestrator.py  panel.py  playbooks.py  prepass.py  recovery_hints.py  role_registry.py  route_keywords.py  router.py  select.py  sensor.py  services.yaml  status.py  strings.json  structured_output.py  tools.py  (+7 more)
docs/: agent-console.md  agentic-loop-redesign.md  assist-setup.md  migration-from-n8n.md
scripts/: deploy_to_ha.sh  smoke_test_mcp.py  smoke_test_phase4.py
tests/: conftest.py  test_activity.py  test_agent.py  test_chat_api.py  test_compaction.py  test_config_helpers.py  test_context.py  test_conversation.py  test_embedded_tools.py  test_eval.py  test_eval_case_promote.py  test_eval_discover.py  test_hacs_api.py  test_llm_client.py  test_loop_policy.py  test_mcp_errors.py  test_mcp_session.py  test_memory.py  test_migration.py  test_phase4_scenarios.py  test_playbooks.py  test_recovery_hints.py  test_role_registry.py  test_route_keywords.py  test_router.py  test_serialize.py  test_skills_creator.py  test_structured_output.py  test_thinking.py  test_threads.py  test_tool_pruning.py  test_tools.py  test_websocket_api.py
(+77 files in other folders)
